misc. code cleanup and an alignment fix for the masthead menu

--- a/kaltura-style.css
+++ b/kaltura-style.css
@@ -98,9 +98,9 @@ p {
 
 form input,
 form textarea {
-	background-color: rgba(255,255,255,.85);
+	background-color: rgb(255,255,255);
 	border: 1px solid #a7a7a7;
-	border-radius: 4px;
+	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	padding:.25em;
@@ -213,7 +213,7 @@ nav li {
 	position: relative;
 	float: right;
 	top:-20px;
-	right:0;
+	right:0
 }
 #kaltura-masthead-menu a
 {
@@ -223,7 +223,7 @@ nav li {
 }
 #kaltura-masthead-menu li
 {
-	margin-right: 1em;	
+	margin-left: 1em;	
 }
 
 /* Application specific menu */
@@ -236,7 +236,7 @@ nav li {
 #kaltura-content-menu {
 	height:54px;
 	font-size: 1.14em;
-	text-shadow: rgba(0, 0, 0, .59) -1px -2px 3px;
+	text-shadow: rgba(0, 0, 0, .59) -1px -2px 2px;
     color: #9ed7e0;
 }
 #kaltura-content-menu a
@@ -251,10 +251,12 @@ nav li {
 {
     color: #fff;
 	font-weight: bold;
+	/* no background right now
 	background: url(kaltura-images/content-menu-hover.png);
 	background-repeat:no-repeat;
 	background-position:center bottom;
 	padding-bottom:20px;
+	*/
 }
 #kaltura-content-menu li
 {
@@ -273,7 +275,7 @@ nav li {
 .grid_2 p,
 .grid_3 p
 {
-margin-right:15px;
+	margin-right:15px;
 }
 
 /* Content Sidebar */
@@ -289,10 +291,6 @@ margin-right:15px;
 	position:relative;
 	background-color: #BCDBE2;
 	border:0px;
-	
-	This style is handy for testing
-	border: 1px solid red; 
-	margin-left:20px;
 	*/
 }
 #kaltura-sidebar{
